change PUT /channels/{channelID} to PATCH /channels/{channelID}. add force parameter.
